--- a/Front-End-Server/src/styles.scss
+++ b/Front-End-Server/src/styles.scss
@@ -1,4 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  background-color: #EEEEEE;
+  // overflow: auto;
+}
+
+.success-snackbar {
+  background: #5b9f5a !important;
+  color: white;
+}
+
+.success-snackbar {
+  .mat-simple-snackbar-action {
+    color: #EDE580;
+  }
+}
+
+.error-snackbar {
+  background: #b24747 !important;
+  color: white;
+}
+
+.error-snackbar {
+  .mat-simple-snackbar-action {
+    color: #EDE580
+  }
+}
