--- a/Front-End-Server/src/app/pages/todo/todo.component.scss
+++ b/Front-End-Server/src/app/pages/todo/todo.component.scss
@@ -14,11 +14,15 @@
   max-width: 250px;
 }
 
-#todo-Btn {
+#todoBtn {
   max-width: 250px;
-  margin: 0.5rem 0 0 0;
+  margin: 0.5rem 1rem 0 0;
 }
 
 #displayList {
   margin-top: 20px;
+}
+
+#saveBtn {
+  margin: 0.85rem;
 }
