Remove @agm/core, use angular official google map component

--- a/src/app/pages/weather/data/data.component.html
+++ b/src/app/pages/weather/data/data.component.html
@@ -1,6 +1,7 @@
 <h2>The temperature of {{data.cityName}} is {{data.temp}}&#8451;</h2>
-<agm-map [zoom]="9" [latitude]="data.lat" [longitude]="data.lng">
-    <agm-marker [latitude]="data.lat" [longitude]="data.lng">
-        <agm-info-window>{{data.cityName}}</agm-info-window>
-    </agm-marker>
-</agm-map>
+
+<google-map [center]="center" [zoom]="zoom">
+    <map-marker #marker *ngFor="let markerPosition of markerPositions" [position]="markerPosition"
+        (mapClick)="openInfoWindow(marker)"></map-marker>
+    <map-info-window>{{ infoContent }}</map-info-window>
+</google-map>
